--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@woonivers/react-native-document-scanner": "^2.1.1",
     "react": "16.13.1",
     "react-native": "0.63.3"
   },
