--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.11.3",
+    "@react-navigation/material-bottom-tabs": "^5.3.9",
+    "@react-navigation/native": "^5.8.9",
+    "@react-navigation/stack": "^5.12.6",
     "@woonivers/react-native-document-scanner": "^2.1.1",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-paper": "^4.4.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.0",
+    "react-navigation-stack": "^2.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
