--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-paper": "^4.4.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
+    "react-native-svg": "^12.1.0",
     "react-navigation-stack": "^2.10.1"
   },
   "devDependencies": {
