--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-paper": "^4.4.0",
+    "react-native-perspective-image-cropper": "^0.4.4",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
