--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-image-size": "^1.1.3",
     "react-native-paper": "^4.4.0",
     "react-native-perspective-image-cropper": "^0.4.4",
     "react-native-safe-area-context": "^3.1.9",
