--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-size": "^1.1.3",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-paper": "^4.4.0",
     "react-native-perspective-image-cropper": "^0.4.4",
     "react-native-safe-area-context": "^3.1.9",
