--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,16 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+subprojects {
+    afterEvaluate {project ->
+        if (project.hasProperty("android")) {
+            android {
+                compileSdkVersion 29
+                buildToolsVersion "29.0.2"
+            }
+        }
+    }
+}
 
 allprojects {
     repositories {
