--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.11.3",
     "@react-navigation/material-bottom-tabs": "^5.3.9",
@@ -24,10 +25,12 @@
     "react-native-image-size": "^1.1.3",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-paper": "^4.4.0",
+    "react-native-popup-menu": "^0.15.9",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
-    "react-navigation-stack": "^2.10.1"
+    "react-navigation-stack": "^2.10.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
