--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-image-base64": "^0.1.4",
     "react-native-image-crop-tools": "^1.3.6",
     "react-native-image-size": "^1.1.3",
+    "react-native-image-viewing": "^0.2.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-paper": "^4.4.0",
     "react-native-popup-menu": "^0.15.9",
