--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.11.3",
     "@react-navigation/material-bottom-tabs": "^5.3.9",
-    "@react-navigation/native": "^5.8.9",
+    "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.6",
     "@woonivers/react-native-document-scanner": "^2.1.1",
     "react": "16.13.1",
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
+    "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.1",
     "rn-fetch-blob": "^0.12.0"
   },
