--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.9",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.6",
+    "@reduxjs/toolkit": "^1.4.0",
     "@woonivers/react-native-document-scanner": "^2.1.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
@@ -30,8 +31,11 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
@@ -42,7 +46,8 @@
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "redux-devtools": "^3.7.0"
   },
   "jest": {
     "preset": "react-native"
