--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^4.0.1",
+    "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.11.3",
     "@react-navigation/material-bottom-tabs": "^5.3.9",
@@ -20,9 +21,11 @@
     "@woonivers/react-native-document-scanner": "^2.1.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-amazing-cropper": "^0.1.4",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-crop-tools": "^1.3.6",
+    "react-native-image-rotate": "^2.1.0",
     "react-native-image-size": "^1.1.3",
     "react-native-image-viewing": "^0.2.0",
     "react-native-image-zoom-viewer": "^3.0.1",
