--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^4.0.1",
+    "@react-native-community/datetimepicker": "^3.0.6",
     "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.11.3",
@@ -19,6 +20,7 @@
     "@react-navigation/stack": "^5.12.6",
     "@reduxjs/toolkit": "^1.4.0",
     "@woonivers/react-native-document-scanner": "^2.1.1",
+    "install": "^0.13.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-amazing-cropper": "^0.1.4",
@@ -29,6 +31,7 @@
     "react-native-image-size": "^1.1.3",
     "react-native-image-viewing": "^0.2.0",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^4.4.0",
     "react-native-popup-menu": "^0.15.9",
     "react-native-safe-area-context": "^3.1.9",
