--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-size": "^1.1.3",
     "react-native-image-viewing": "^0.2.0",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^4.4.0",
     "react-native-popup-menu": "^0.15.9",
