--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
