--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-popup-menu": "^0.15.9",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
