--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^4.4.0",
+    "react-native-permissions": "^3.0.0",
     "react-native-popup-menu": "^0.15.9",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
