--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/stack": "^5.12.6",
     "@reduxjs/toolkit": "^1.4.0",
     "@woonivers/react-native-document-scanner": "^2.1.1",
+    "hummus": "^1.0.110",
+    "images-to-pdf": "^1.0.3",
     "install": "^0.13.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
