--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "hummus": "^1.0.110",
     "images-to-pdf": "^1.0.3",
     "install": "^0.13.0",
+    "pdf-lib": "^1.14.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-amazing-cropper": "^0.1.4",
+    "react-native-base64": "^0.2.1",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-crop-tools": "^1.3.6",
@@ -47,7 +51,6 @@
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "rn-fetch-blob": "^0.12.0",
     "sha256": "^0.2.0"
   },
   "devDependencies": {
