--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@react-navigation/stack": "^5.12.6",
     "@reduxjs/toolkit": "^1.4.0",
     "@woonivers/react-native-document-scanner": "^2.1.1",
+    "bic": "^1.1.1",
     "hummus": "^1.0.110",
+    "iban": "0.0.14",
     "images-to-pdf": "^1.0.3",
     "install": "^0.13.0",
     "pdf-lib": "^1.14.1",
@@ -51,7 +53,8 @@
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "utf-8-validate": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
