made loading screen and fixed rescan function

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,13 +5,21 @@ platform :ios, '10.0'
 
 target 'CareConcept' do
   config = use_native_modules!
-
   use_react_native!(:path => config["reactNativePath"])
+  
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+
+  
+
+ 
 
   target 'CareConceptTests' do
     inherit! :complete
     # Pods for testing
   end
+  
+  
 
   # Enables Flipper.
   #
