--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@reduxjs/toolkit": "^1.4.0",
     "@woonivers/react-native-document-scanner": "^2.1.1",
     "bic": "^1.1.1",
+    "i18n-js": "^3.8.0",
     "iban": "0.0.14",
     "images-to-pdf": "^1.0.3",
     "install": "^0.13.0",
+    "lodash.memoize": "^4.1.2",
     "pdf-lib": "^1.14.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
@@ -38,6 +40,7 @@
     "react-native-image-viewing": "^0.2.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-localize": "^2.0.1",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^4.4.0",
     "react-native-permissions": "^3.0.0",
