--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.0.3",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
