--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "prettier": "2.2.1",
     "react-test-renderer": "16.13.1",
     "redux-devtools": "^3.7.0"
   },
