--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@react-native-community/datetimepicker": "^3.0.6",
     "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/drawer": "^5.11.3",
     "@react-navigation/material-bottom-tabs": "^5.3.9",
-    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.12.6",
     "@reduxjs/toolkit": "^1.4.0",
     "@woonivers/react-native-document-scanner": "^2.1.1",
