--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-crop-tools": "^1.3.6",
+    "react-native-image-resizer": "^1.4.2",
     "react-native-image-rotate": "^2.1.0",
     "react-native-image-size": "^1.1.3",
     "react-native-image-viewing": "^0.2.0",
