fixed some issues, made better app icon

--- a/ios/CareConcept/Info.plist
+++ b/ios/CareConcept/Info.plist
@@ -38,7 +38,8 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Required by careconcept to scan documents</string>
+	<string>"Access is required for scanning documents.
+	Der Zugang wird benötigt, um Dokumente zu scannen."</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
