--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+MYAPP_UPLOAD_STORE_FILE=CareConcept.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=CareConcept1999-2021
+MYAPP_UPLOAD_KEY_PASSWORD=CareConcept1999-2021
