--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "install": "^0.13.0",
     "lodash.memoize": "^4.1.2",
     "pdf-lib": "^1.14.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-amazing-cropper": "^0.1.4",
@@ -47,6 +48,7 @@
     "react-native-paper": "^4.4.0",
     "react-native-permissions": "^3.0.0",
     "react-native-popup-menu": "^0.15.9",
+    "react-native-rectangle-scanner": "^1.0.10",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-status-bar-height": "^2.6.0",
