--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  android:versionCode = "1.0.0"
-  android:versionName = "CareConcept_1.0.0"
+  android:versionCode = "1"
+  android:versionName = "1.0.0"
   package="com.careconcept"
   xmlns:tools="http://schemas.android.com/tools"
   >
