--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.12.6",
     "@reduxjs/toolkit": "^1.4.0",
-    "@woonivers/react-native-document-scanner": "^2.1.1",
     "bic": "^1.1.1",
     "i18n-js": "^3.8.0",
     "iban": "0.0.14",
@@ -47,6 +46,7 @@
     "react-native-paper": "^4.4.0",
     "react-native-permissions": "^3.0.0",
     "react-native-popup-menu": "^0.15.9",
+    "react-native-rectangle-scanner": "^1.0.10",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-status-bar-height": "^2.6.0",
