--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "react-native-amazing-cropper": "^0.1.4",
     "react-native-base64": "^0.2.1",
     "react-native-common-date-picker": "^2.3.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-crop-tools": "^1.3.6",
-    "react-native-image-resizer": "^1.4.2",
     "react-native-image-rotate": "^2.1.0",
     "react-native-image-size": "^1.1.3",
     "react-native-image-viewing": "^0.2.0",
